# blockchain

blockchain-frontend/: .env  package-lock.json  package.json
blockchain-frontend/src/: App.jsx  index.css
blockchain-frontend/src/components/: BlockExplorer.jsx  BlockVisualization.jsx  LoadingOverlay.jsx
blockchain-frontend/src/contracts/: ERC20.json
blockchain-frontend/src/hooks/: useBlockchain.js  useDataPolling.js
blockchain-frontend/src/layouts/: DashboardLayout.jsx  GovernanceLayout.jsx  MainLayout.jsx  StakingLayout.jsx
blockchain-frontend/src/pages/: Contracts.jsx  Dashboard.jsx  Explorer.jsx  Governance.jsx  Network.jsx  Staking.jsx  Wallet.jsx
blockchain-frontend/src/routes/: index.jsx
blockchain-frontend/src/services/: TokenService.js  (+4 more)
nexuschain-backend/: Cargo.toml
nexuschain-backend/src/: error.rs  main.rs  websocket.rs
nexuschain-backend/src/api/: bft_routes.rs  metrics_routes.rs  mod.rs  routes.rs  scaling_routes.rs
nexuschain-backend/src/blockchain/: bft_consensus.rs  bft_sync.rs  block.rs  consensus.rs  consensus_advanced.rs  cross_shard.rs  dispute.rs  governance.rs  mempool.rs  mod.rs  network_consensus.rs  sharding.rs  staking.rs  state_channel.rs  synchronization.rs  token.rs  transaction.rs  transaction_validation.rs
nexuschain-backend/src/metrics/: bft_metrics.rs  consensus_metrics.rs
nexuschain-backend/src/networking/: mod.rs  node.rs  peer.rs
nexuschain-backend/src/tests/: bft_tests.rs
nexuschain-backend/src/wallet/: account.rs  mod.rs  multisig.rs
nexuschain-backend/src/websocket/: mod.rs
src/routes/: routes.js
(+73 files in other folders)
