[package]
name = "nexuschain-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
axum = { version = "0.6", features = ["ws"] } 
tokio-tungstenite = "0.20"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3" 
secp256k1 = { version = "0.21", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
rand = "0.8"
utoipa = { version = "4.0", features = ["axum_extras"] }
utoipa-swagger-ui = "1.0"
actix-web = "4.4"
tower-http = { version = "0.4", features = ["cors", "trace", "limit"] }
tower = { version = "0.4", features = ["limit"] }
axum-extra = "0.6"
axum-limit = "0.1.0-alpha.2"
lazy_static = "1.4.0"